plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.2'
    id 'io.spring.dependency-management' version '1.1.5'
    id 'jacoco'
}

group = 'com.ms.mspactual'
version = '0.0.1-SNAPSHOT'
description = 'mspactual'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {

    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'com.tngtech.archunit:archunit-junit5:1.3.0'

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.withType(Test) {

    useJUnitPlatform()

    jvmArgs += [
            "-XX:+EnableDynamicAgentLoading"
    ]

    testLogging {
        events "PASSED", "FAILED", "SKIPPED"
        showStandardStreams = true
    }

    if (project.hasProperty('profile')) {
        systemProperty 'spring.profiles.active', project.getProperty('profile')
    }
}

jacoco {
    toolVersion = '0.8.11'
}

jacocoTestReport {
    dependsOn test

    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: [
                    'com/ms/mspactual/infrastructurecross/**',
                    'com/ms/mspactual/MspactualApplication.class',
            ])
        }))
    }

    reports {
        xml.required.set(true)
        html.required.set(true)
    }
}

check.dependsOn jacocoTestReport
